--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
+    "detox": "^20.5.0",
     "eslint": "^8.19.0",
-    "jest": "^29.2.1",
+    "jest": "^29.5.0",
     "metro-react-native-babel-preset": "0.73.8",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
